--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     <h4>Engi Milán</h4>
     <h5>Engi Milán</h5>
     <h6>Engi Milán</h6>
+    
+    <a href="keplink.html">Keplink</a>
 
-    <a href="keplink.html">keplink</a>
+
+    <br>
+    <br>
+
+
+    <a href="lista.html">Lista</a>
 
     <p>Itt <b>látható</b> a <i>kollázs</i> képem.</p>
 
