--- a/keplink.html
+++ b/keplink.html
@@ -15,7 +15,6 @@ Főoldal:
 <br>
 <br>
 
-<a href="https://www.formula1.com/"><img src="https://img.redbull.com/images/c_crop,w_3200,h_1600,x_0,y_530,f_auto,q_auto/c_scale,w_1200/redbullcom/2018/07/01/18cc623f-7e34-49c6-b327-0a83c3cda600/max-verstappen-austrian-grand-prix-2018" alt=""></a>
-
+<a href="https://www.formula1.com/" target="_blank"><img src="https://img.redbull.com/images/c_crop,w_3200,h_1600,x_0,y_530,f_auto,q_auto/c_scale,w_1200/redbullcom/2018/07/01/18cc623f-7e34-49c6-b327-0a83c3cda600/max-verstappen-austrian-grand-prix-2018" alt=""></a>
 </body>
 </html>
